# nextest

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .releases.json  404.html  AGENTS.md  CHANGELOG.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  LICENSE-MIT  README.md  index.html  jsonschemas  nextest.toml  print.html  release-publish.toml  release.toml  searchindex.js  searchindex.json  sitemap.txt  sitemap.xml  zizmor.yml
cargo-nextest/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
cargo-nextest/src/: cargo_cli.rs  dispatch.rs  double_spawn.rs  errors.rs  helpers.rs  lib.rs  main.rs  mangen.rs  output.rs  reuse_build.rs  update.rs  version.rs
cargo-nextest/src/dispatch/: app.rs  clap_error.rs  cli.rs  commands.rs  common.rs  execution.rs  help.rs  helpers.rs  imp.rs  mod.rs
cargo-nextest/src/snapshots/: cargo_nextest__errors__tests__multiple_features.snap  cargo_nextest__errors__tests__single_with_env_var.snap  cargo_nextest__errors__tests__single_without_env_var.snap
cargo-nextest/src/tests_integration/: fixtures.rs  mod.rs  temp_project.rs
datatest-stable/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
datatest-stable/src/: lib.rs  macros.rs  runner.rs  utils.rs
datatest-stable/tests/: example.rs
fixture-data/: Cargo.toml
fixture-data/src/: fixture_project.rs  lib.rs  models.rs  nextest_tests.rs
fixtures/nextest-tests/: Cargo.toml  build.rs  my-script.sh
fixtures/nextest-tests/.cargo/: config  extra-config.toml
fixtures/nextest-tests/.config/: nextest.toml
fixtures/nextest-tests/benches/: my-bench.rs
fixtures/nextest-tests/derive/: Cargo.toml
fixtures/nextest-tests/dylib-test/: Cargo.toml
fixtures/nextest-tests/examples/: nextest-tests.rs  other.rs
fixtures/nextest-tests/scripts/: my-script.bat  my-script.sh  wrapper.sh
fixtures/nextest-tests/src/: lib.rs  main.rs
fixtures/nextest-tests/tests/: basic.rs  segfault.rs
fixtures/nextest-tests/with-build-script/: Cargo.toml  build.rs
integration-tests/: Cargo.toml
integration-tests/src/: env.rs  lib.rs  nextest_cli.rs  seed.rs
integration-tests/test-helpers/: build-seed-archive.rs  cargo-nextest-dup.rs  fake-debugger.rs  fake-interceptor.rs  grab-foreground.rs  passthrough.rs  rustc-shim-print-cfg.txt  rustc-shim.rs
integration-tests/tests/: custom-harness.rs
integration-tests/tests/datatest/: custom_target.rs  helpers.rs  main.rs
integration-tests/tests/integration/: cargo_message_format.rs  cpu_priority.rs  debugger.rs  fixtures.rs  interceptor.rs  large_alloc.rs  list_progress.rs  main.rs  record_replay.rs  sigttou.rs  stuck_signal.rs  temp_project.rs  user_config.rs
internal-tools/zstd-dict/: .gitignore  Cargo.toml  Makefile  plot_cdf.gnu  plot_cdf_by_category.gnu
internal-tools/zstd-dict/src/: main.rs
nextest-filtering/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  reference.md
nextest-filtering/examples/: parser.rs
nextest-filtering/fuzz/: .gitignore  Cargo.toml
nextest-filtering/fuzz/fuzz_targets/: fuzz_parsing.rs
nextest-filtering/src/: compile.rs  error.rs  errors.rs  expression.rs  lib.rs  parsing.rs  proptest_helpers.rs
nextest-filtering/src/parsing/: glob.rs  unicode_string.rs
nextest-filtering/tests/: match.rs
nextest-metadata/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
nextest-metadata/src/: errors.rs  exit_codes.rs  lib.rs  test_list.rs
nextest-runner/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs  default-config.toml  default-user-config.toml  repo-config-reference.md  user-config-reference.md
nextest-runner/jsonschemas/: repo-config.json  user-config.json
nextest-runner/proptest-regressions/reporter/: events.txt
nextest-runner/src/: cargo_cli.rs  cargo_config.rs  cargo_toml.rs  config.rs  console.rs  cpu_priority_probe.rs  dispatch.rs  double_spawn.rs  errors.rs  help_render.rs  helpers.rs  indenter.rs  input.rs  lib.rs  main.rs  output.rs  output_spec.rs  pager.rs  partition.rs  platform.rs  redact.rs  reporter.rs  reuse_build.rs  run_mode.rs  run_store.rs  runner.rs  rustc_cli.rs  signal.rs  stopwatch.rs  target_runner.rs  test_command.rs  test_filter.rs  test_list.rs  test_output.rs  update.rs  usdt.rs  write_str.rs
nextest-runner/src/cache/: backend.rs  fs_backend.rs  handle.rs  imp.rs  key.rs  mod.rs  parallel.rs  policy.rs  result.rs  tests.rs  writer.rs
nextest-runner/src/cargo_config/: custom_platform.rs  discovery.rs  env.rs  mod.rs  target_triple.rs  test_helpers.rs
nextest-runner/src/config/: archive.rs  archive_include.rs  bench.rs  config_impl.rs  fail_fast.rs  global_timeout.rs  helpers.rs  identifier.rs  junit.rs  leak_timeout.rs  max_fail.rs  mod.rs  nextest_version.rs  overrides.rs  phase.rs  priority.rs  retry_policy.rs  scripts.rs  slow_timeout.rs  store.rs  test_group.rs  test_helpers.rs  test_threads.rs  threads_required.rs  tool_config.rs  track_default.rs
nextest-runner/src/helpers/: progress.rs
nextest-runner/src/list/: binary_list.rs  display_filter.rs  mod.rs  output_format.rs  (+6 more)
nextest-runner/test-helpers/: passthrough.rs
nextest-runner/tests/: basic.rs  target_runner.rs
nextest/cargo-nextest/: Cargo.toml
nextest/config/: Cargo.toml  default-config.toml
nextest/metadata/: Cargo.toml  README.md  README.tpl
nextest/runner/: Cargo.toml  README.md  README.tpl  default-config.toml
quick-junit/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
quick-junit/src/: errors.rs  lib.rs  report.rs  serialize.rs
quick-junit/tests/: fixture_tests.rs
site/: .envrc  .gitignore  README.md  book.toml  mkdocs.yml  pyproject.toml
site/css/: extra.css
site/help-text/: archive-help.txt  list-help.txt  run-help.txt
site/layouts/: custom.yml
site/overrides/: home.html
site/release-meta-static/: extra-redirects  netlify.toml
site/src/: CHANGELOG.md  README.md  SUMMARY.md  _headers  _redirects  changelog.md  index.md
site/theme/: head.hbs
testrunner/: Cargo.toml
testrunner/src/: dispatch.rs  lib.rs  main.rs  output.rs  reporter.rs  runner.rs  test_filter.rs  test_list.rs
testrunner/tests/: basic.rs
(+29897 files in other folders)
