[workspace]
resolver = "2"
members = [
  "cargo-nextest",
  "fixture-data",
  "integration-tests",
  "nextest-filtering",
  "nextest-metadata",
  "nextest-runner",
  "workspace-hack",
]

[workspace.package]
rust-version = "1.75"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aho-corasick = "1.1.3"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
atomicwrites = "0.4.3"
bstr = { version = "1.10.0", default-features = false, features = ["std"] }
bytes = "1.7.1"
camino = "1.1.9"
camino-tempfile = "1.1.1"
cargo_metadata = "0.18.1"
# We specify default-no-update here because if users just run:
#
# cargo build --no-default-features --features default-no-update
#
# then cargo will unify features for cargo-nextest, and it will be built with self-update enabled.
# We could ask distributors to always include `--package cargo-nextest` instead, but they're likely
# to forget. None of our current tests depend on self-update, so just don't include it by default.
cargo-nextest = { path = "cargo-nextest", default-features = false, features = [
    "default-no-update",
] }
cfg-if = "1.0.0"
# The default features for color-eyre include tracing support -- for now we don't use that support.
color-eyre = { version = "0.6.3", default-features = false }
# config's "preserve_order" feature is needed for preserving the order of
# setup scripts in .config/nextest.toml.
config = { version = "0.14.0", default-features = false, features = [
    "toml",
    "preserve_order",
] }
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
console-subscriber = "0.4.0"
dialoguer = "0.11.0"
debug-ignore = "1.0.5"
display-error-chain = "0.2.1"
duct = "0.13.7"
dunce = "1.0.5"
enable-ansi-support = "0.2.1"
# we don't use the default formatter so we don't need default features
env_logger = { version = "0.11.5", default-features = false }
fixture-data = { path = "fixture-data" }
future-queue = "0.3.0"
futures = "0.3.30"
globset = "0.4.15"
guppy = "0.17.7"
home = "0.5.9"
http = "1.1.0"
humantime-serde = "1.1.1"
indexmap = "2.5.0"
indicatif = "0.17.8"
indoc = "2.0.5"
insta = { version = "1.40.0", default-features = false }
is_ci = "1.2.0"
itertools = "0.13.0"
libc = "0.2.158"
log = "0.4.22"
maplit = "1.0.2"
miette = "7.2.0"
mukti-metadata = "0.2.1"
# note: we don't use owo-colors' if_supports_color support for now, instead preferring to use our
# own supports-color + stylesheets everywhere.
newtype-uuid = { version = "1.1.0", features = ["v4"] }
nextest-filtering = { version = "0.12.0", path = "nextest-filtering" }
nextest-metadata = { version = "0.12.1", path = "nextest-metadata" }
nextest-workspace-hack = "0.1.0"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
once_cell = "1.19.0"
owo-colors = "4.0.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
pin-project-lite = "0.2.14"
pretty_assertions = "1.4.0"
proptest = "1.5.0"
quick-junit = "0.5.0"
rand = "0.8.5"
recursion = "0.5.2"
regex = "1.10.6"
regex-syntax = "0.8.4"
semver = "1.0.23"
self_update = { version = "0.41.0", default-features = false, features = [
    "archive-tar",
    "compression-flate2",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
shell-words = "1.1.0"
smallvec = "1.13.2"
smol_str = { version = "0.3.1", features = ["serde"] }
strip-ansi-escapes = "0.2.0"
supports-color = "3.0.1"
supports-unicode = "3.0.0"
swrite = "0.1.0"
tar = "0.4.41"
target-spec = { version = "3.2.1", features = ["custom", "summaries"] }
target-spec-miette = "0.4.0"
test-case = "3.3.1"
test-strategy = "0.4.0"
thiserror = "1.0.63"
tokio = "1.40.0"
toml = "0.8.19"
toml_edit = "0.22.20"
unicode-ident = "1.0.13"
unicode-normalization = "0.1.23"
win32job = "2.0.0"
windows-sys = "0.59.0"
winnow = "0.6.18"
xxhash-rust = "0.8.12"
zstd = { version = "0.13.2", features = ["zstdmt"] }

# make backtrace + color-eyre faster on debug builds
[profile.dev.package.backtrace]
opt-level = 3

# insta and similar are recommended by insta
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
# Ensure that symbols and debuginfo aren't stripped. They're useful for debugging issues with
# nextest in the field, and don't bloat up binaries too much
strip = "none"

[patch.crates-io]
nextest-workspace-hack = { path = "workspace-hack" }

# Uncomment for testing.
# [patch.crates-io]
# cargo_metadata = { path = "../cargo_metadata" }
# target-spec = { path = "../guppy/target-spec" }
# target-spec-miette = { path = "../guppy/target-spec-miette" }
# quick-junit = { path = "../quick-junit" }
