[package]
name = "cargo-nextest"
description = "A next-generation test runner for Rust."
version = "0.9.68-b.2"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://nexte.st"
keywords = ["nextest", "test-runner", "flaky-tests", "junit"]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
edition = "2021"
rust-version.workspace = true

[dependencies]
camino = "1.1.6"
cfg-if = "1.0.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
# we don't use the tracing support
color-eyre = { version = "0.6.3", default-features = false }
dialoguer = "0.11.0"
duct = "0.13.7"
enable-ansi-support = "0.2.1"
# we don't use the default formatter so we don't need default features
env_logger = { version = "0.11.3", default-features = false }
guppy = "0.17.5"
log = "0.4.21"
itertools = "0.12.1"
miette = { workspace = true, features = ["fancy"] }
nextest-filtering = { version = "=0.8.0", path = "../nextest-filtering" }
nextest-runner = { version = "=0.54.0", path = "../nextest-runner" }
nextest-metadata = { version = "=0.10.0", path = "../nextest-metadata" }
once_cell = "1.19.0"
owo-colors.workspace = true
pathdiff = { version = "0.2.1", features = ["camino"] }
semver = "1.0.22"
shell-words = "1.1.0"
supports-color = "2.1.0"
supports-unicode = "3.0.0"
serde_json = "1.0.114"
swrite.workspace = true
thiserror = "1.0.58"
nextest-workspace-hack.workspace = true

[features]
default = ["default-no-update", "self-update"]
experimental-tokio-console = ["nextest-runner/experimental-tokio-console"]
# Perform self-updates (enabled by default)
self-update = ["nextest-runner/self-update"]
# Default set of features excluding self-update. This is the recommended set of features for
# distributor and custom CI builds.
default-no-update = []

# Metadata for cargo-binstall to get the right artifacts.
# NOTE: The URLs use GitHub Releases rather than get.nexte.st. This is so that cargo-nextest package
# publishing doesn't race with Netlify updates.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cargo-nextest-{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Mac x86_64 and aarch64 use the same universal binary.
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-nextest-{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-nextest-{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"
