[package]
name = "datatest-stable"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Data-driven tests that work on stable Rust"
repository = "https://github.com/diem/diem-devtools"
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"

[dependencies]
regex = "1.4.3"
walkdir = "2.3.1"
structopt = "0.3.21"
termcolor = "1.1.2"

[[test]]
name = "example"
harness = false
