[package]
name = "datatest-stable"
version = "0.1.1"
authors = ["Diem Association <opensource@diem.com>"]
description = "Data-driven tests that work on stable Rust"
repository = "https://github.com/diem/diem-devtools"
license = "MIT OR Apache-2.0"
publish = ["crates-io"]
readme = "README.md"
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["datatest", "data-driven-tests", "test-harness"]

[dependencies]
regex = "1.5.4"
walkdir = "2.3.2"
structopt = "0.3.26"
termcolor = "1.1.2"

[[test]]
name = "example"
harness = false
