[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "cargo-nextest-dup"
path = "test-helpers/cargo-nextest-dup.rs"

[dependencies]
# We specify default-no-update here because if users just run:
#
# cargo build --no-default-features --features default-no-update
#
# then cargo will unify features for cargo-nextest, and it will be built with self-update enabled.
# We could ask distributors to always include `--package cargo-nextest` instead, but they're likely
# to forget. None of our current tests depend on self-update, so just don't include it by default.
cargo-nextest.workspace = true
color-eyre.workspace = true
clap = { workspace = true, features = ["env"] }
enable-ansi-support.workspace = true
nextest-workspace-hack.workspace = true

[dev-dependencies]
camino-tempfile.workspace = true
camino.workspace = true
cfg-if.workspace = true
fixture-data.workspace = true
insta.workspace = true
itertools.workspace = true
nextest-metadata.workspace = true
pathdiff.workspace = true
regex.workspace = true
serde_json.workspace = true
target-spec.workspace = true
