[package]
name = "nextest-filtering"
version = "0.8.0"
description = "Filtering DSL for cargo-nextest"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/nextest-filtering"
keywords = ["nextest", "test-runner"]
categories = ["development-tools::testing"]
rust-version.workspace = true

[[bin]]
name = "generate-expr-corpus"
required-features = ["internal-testing"]
# XXX: Why does cargo-readme need this?
path = "src/bin/generate-expr-corpus.rs"

[features]
default = []
# Note: Not part of the public API.
internal-testing = ["dep:proptest", "dep:test-strategy", "dep:xxhash-rust"]
# Uncomment and enable the feature below to get trace output for parsing. This feature must be
# called `trace` which is a bit unfortunate.
# trace = ["nom-tracable/trace"]

[dependencies]
globset.workspace = true
guppy = "0.17.5"
miette.workspace = true
recursion = "0.5.2"
regex = "1.10.4"
regex-syntax = "0.8.3"
thiserror = "1.0.59"
nextest-metadata.workspace = true
proptest = { version = "1.4.0", optional = true }
test-strategy = { version = "0.3.1", optional = true }
xxhash-rust = { version = "0.8.10", features = ["xxh3"], optional = true }
nextest-workspace-hack.workspace = true
winnow = "0.6.7"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
camino = "1.1.6"
test-case = "3.3.1"
proptest = { version = "1.4.0" }
test-strategy = { version = "0.3.1" }
