[package]
name = "nextest-filtering"
version = "0.18.0"
description = "Filtering DSL for cargo-nextest"
license = "MIT OR Apache-2.0"
edition.workspace = true
readme = "README.md"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/nextest-filtering"
keywords = ["nextest", "test-runner"]
categories = ["development-tools::testing"]
rust-version.workspace = true

[[bin]]
name = "generate-expr-corpus"
required-features = ["internal-testing"]
# XXX: Why does cargo-readme need this?
path = "src/bin/generate-expr-corpus.rs"

[features]
default = []
# Note: Not part of the public API.
internal-testing = ["dep:proptest", "dep:test-strategy", "dep:xxhash-rust"]
# Uncomment and enable the feature below to get trace output for parsing. This feature must be
# called `trace` which is a bit unfortunate.
# trace = ["nom-tracable/trace"]

[dependencies]
globset.workspace = true
guppy.workspace = true
miette.workspace = true
nextest-metadata.workspace = true
nextest-workspace-hack.workspace = true
proptest = { workspace = true, optional = true }
recursion.workspace = true
regex-syntax.workspace = true
regex.workspace = true
smol_str.workspace = true
test-strategy = { workspace = true, optional = true }
thiserror.workspace = true
winnow.workspace = true
xxhash-rust = { workspace = true, features = ["xxh3"], optional = true }

[dev-dependencies]
camino.workspace = true
clap.workspace = true
proptest.workspace = true
test-case.workspace = true
test-strategy.workspace = true
