[package]
name = "nextest-metadata"
version = "0.11.0"
description = "Structured access to nextest machine-readable output."
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/nextest-metadata"
keywords = ["nextest", "test-runner"]
categories = ["development-tools::testing"]
rust-version.workspace = true

[dependencies]
camino = { version = "1.1.8", features = ["serde1"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
target-spec.workspace = true
smol_str = { version = "0.2.2", features = ["serde"] }
nextest-workspace-hack.workspace = true

[dev-dependencies]
test-case = "3.3.1"
