[package]
name = "nextest-metadata"
version = "0.12.1"
description = "Structured access to nextest machine-readable output."
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/nextest-rs/nextest"
documentation = "https://docs.rs/nextest-metadata"
keywords = ["nextest", "test-runner"]
categories = ["development-tools::testing"]
rust-version.workspace = true

[dependencies]
camino = { workspace = true, features = ["serde1"] }
nextest-workspace-hack.workspace = true
serde_json.workspace = true
serde.workspace = true
smol_str.workspace = true
target-spec.workspace = true

[dev-dependencies]
test-case.workspace = true
